--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,3 @@
-
-
 #head_picture{
 	min-height:100%;
     width:100%;
@@ -32,9 +30,13 @@
 
 #head_word h1{
 	color: white;
-	float: right;
+	/*float: right;*/
 	padding-left: 8%;
 	font-size: 30px;
+	display: inline;
+	position: relative;
+	top: 20px;
+	left: 500px;
 }
 
 #head_word h1 a{
